--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -25,9 +25,10 @@ include nova/console/xvp.conf.template
 include nova/db/sqlalchemy/migrate_repo/migrate.cfg
 include nova/db/sqlalchemy/migrate_repo/README
 include nova/db/sqlalchemy/migrate_repo/versions/*.sql
+include nova/virt/cpuinfo.xml.template
 include nova/virt/interfaces.template
 include nova/virt/libvirt*.xml.template
-include nova/virt/cpuinfo.xml.template
+include nova/virt/resolv.conf.template
 include nova/tests/CA/
 include nova/tests/CA/cacert.pem
 include nova/tests/CA/private/
